Adding CategoryObserver
    php artisan make:observer CategoryObserver --model=Category