@@ -6,6 +6,12 @@ use Illuminate\Database\Eloquent\Model;
 
 class Category extends Model
 {
+    public $fillable = [
+        'name',
+        'slug',
+        'description',
+    ];
+
 
     public function author()
     {
@@ -16,4 +22,41 @@ class Category extends Model
     {
         return $this->belongsTo(User::class, 'editor_id');
     }
+
+
+    /**
+     * set author_id from auth user
+     *
+     * @param  Category  $category
+     * @return  Category $category
+     */
+    public function setAuthor() {
+        $this->author_id = auth()->user()->id;
+        return $this;
+    }
+
+    /**
+     * set editor_id from auth user
+     *
+     * @param  Category  $category
+     * @return  Category $category
+     */
+    public function setEditor() {
+        $this->editor_id = auth()->user()->id;
+        return $this;
+    }
+
+    /**
+     * sets message the variable for the next request only
+     *
+     * @return  Category $category
+     */
+    public function setFlashMess()
+    {
+        info(__METHOD__);
+        session()->flash('message', __('success_category_update'));
+        session()->flash('alert-class', 'success');
+        return $this;
+    }
+
 }
